create database for the project

--- a/app/views/expenses/_expense.html.erb
+++ b/app/views/expenses/_expense.html.erb
@@ -1,12 +1,12 @@
-<div id="<%= dom_id expanse %>">
+<div id="<%= dom_id expense %>">
   <p>
     <strong>Name:</strong>
-    <%= expanse.name %>
+    <%= expense.name %>
   </p>
 
   <p>
     <strong>Amount:</strong>
-    <%= expanse.amount %>
+    <%= expense.amount %>
   </p>
 
 </div>
