--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: expanse) do |form| %>
-  <% if expanse.errors.any? %>
+<%= form_with(model: expense) do |form| %>
+  <% if expense.errors.any? %>
     <div style="color: red">
-      <h2><%= pluralize(expanse.errors.count, "error") %> prohibited this expanse from being saved:</h2>
+      <h2><%= pluralize(expense.errors.count, "error") %> prohibited this expense from being saved:</h2>
 
       <ul>
-        <% expanse.errors.each do |error| %>
+        <% expense.errors.each do |error| %>
           <li><%= error.full_message %></li>
         <% end %>
       </ul>
