--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,14 +5,18 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <link rel= "stylesheet" href = "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
-      <p class="notice"><%= notice %></p>
+  <%= render 'shared/navbar' %>
+     <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
+      <p class="navbar-text float-right">
+
+</p>
     <%= yield %>
   </body>
 </html>
