--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,14 +1,15 @@
-<p style="color: green"><%= notice %></p>
+<% @users.each do |user| %>
+    <div class="user_c">
+      <div class="user_img">
+        
+      </div>
+      <div class="user_data">
+        <%= link_to user_path(user.id) do %>
+        <h2><%= user.name%></h2>
+        <% end %>
+       
+      </div>
+    </div>
+  <%end%>
 
-<h1>Users</h1>
-
-<div id="users">
-  <% @users.each do |user| %>
-    <%= render user %>
-    <p>
-      <%= link_to "Show this user", user %>
-    </p>
-  <% end %>
-</div>
-
-<%= link_to "New user", new_user_path %>
+<%= link_to "New user", new_user_session_path %>
