--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -1,27 +1,17 @@
-<%= form_with(model: expense) do |form| %>
-  <% if expense.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(expense.errors.count, "error") %> prohibited this expense from being saved:</h2>
+<%= form_with model: @expense, url: group_expenses_path, method: :post, local: true do |form| %>
 
-      <ul>
-        <% expense.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+    <div class="mb-3 p-2">
+      <%= form.label :name, "Name", :class => "form-label" %>
+      <%= form.text_field :name, placeholder: "Transaction Name", required: true, :class => "form-control" %>
     </div>
-  <% end %>
 
-  <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
-  </div>
+    <div class="mb-3 p-2">
+      <%= form.label :amount, "Amount", :class => "form-label" %>
+      <%= form.number_field :amount, placeholder: "Amount", required: true, :class => "form-control" %>
+    </div>
 
-  <div>
-    <%= form.label :amount, style: "display: block" %>
-    <%= form.number_field :amount %>
-  </div>
+    <div class="p-2 text-center">
+      <%= form.submit "Save", class: "btn btn-primary", disable_with: "Please wait..." %>
+    </div>
 
-  <div>
-    <%= form.submit %>
-  </div>
 <% end %>
