--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -1,14 +1,24 @@
-<p style="color: green"><%= notice %></p>
-
-<h1>Expenses</h1>
-
-<div id="expenses">
-  <% @expenses.each do |expense| %>
-    <%= render expense %>
-    <p>
-      <%= link_to "Show this expense", expense %>
-    </p>
-  <% end %>
+<div class="d-flex p-2 brand-text">
+  <h1><%= @group.name.capitalize %>'s transactions</h1>
 </div>
 
-<%= link_to "New expense", new_expense_path %>
+<div class="p-2 text-dark-50">
+  <h3>Total spent: <%= @group.total_transaction %></h3>
+</div>
+
+
+<% @expenses.each do |ex| %>
+  <div class="p-2">
+    <div class="card p-2 bg-light">
+      <div class="card-body">
+        <h5 class="card-title"><%= ex.name %></h5>
+        <p class="card-text"><%= ex.amount %></p>
+        <p class="card-text"><small class="text-muted"><%= ex.created_at %></small></p>
+      </div>
+    </div>
+  </div>
+<% end %>
+
+<div class="p-2 text-center">
+  <%= link_to "Add transaction", new_group_entity_path(@group, @expense), :class => "btn btn-primary" %>
+</div>
