--- a/app/views/expenses/show.html.erb
+++ b/app/views/expenses/show.html.erb
@@ -1,10 +1,2 @@
-<p style="color: green"><%= notice %></p>
-
-<%= render @expense %>
-
-<div>
-  <%= link_to "Edit this expense", edit_expense_path(@expense) %> |
-  <%= link_to "Back to expenses", expenses_path %>
-
-  <%= button_to "Destroy this expense", @expense, method: :delete %>
-</div>
+<h1>Expenses#show</h1>
+<p>Find me in app/views/expenses/show.html.erb</p>
