--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -1,27 +1,15 @@
-<%= form_with(model: group) do |form| %>
-  <% if group.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(group.errors.count, "error") %> prohibited this group from being saved:</h2>
-
-      <ul>
-        <% group.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+<%= form_with model: @group, method: :post, local: true do |form| %>
+    <div class="mb-3 p-2">
+      <%= form.label :name, "Name", :class => "form-label" %>
+      <%= form.text_field :name, placeholder: "Category Name", required: true, :class => "form-control" %>
     </div>
-  <% end %>
 
-  <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
-  </div>
+    <div class="mb-3 p-2">
+      <%= form.label :icon, "Icon", :class => "form-label" %>
+      <%= form.url_field :icon, placeholder: "Icon link", required: true, :class => "form-control" %>
+    </div>
 
-  <div>
-    <%= form.label :icon, style: "display: block" %>
-    <%= form.text_field :icon %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
+    <div class="p-2 text-center">
+      <%= form.submit "Save", class: "btn btn-primary", disable_with: "Please wait..." %>
+    </div>
 <% end %>
