--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,14 +1,24 @@
-<p style="color: green"><%= notice %></p>
-
-<h1>Groups</h1>
-
-<div id="groups">
-  <% @groups.each do |group| %>
-    <%= render group %>
-    <p>
-      <%= link_to "Show this group", group %>
-    </p>
-  <% end %>
+<h1 class="brand-text text-primary px-2">Categories</h1>
+<div class="px-2">
+<% @groups.each do |group| %>
+  <div class="card mb-3 bg-light" style="max-width: 540px;">
+    <div class="row g-0">
+      <div class="col-4 py-3">
+          <img src="<%=(url_for(group.icon))%>" class="img-fluid rounded mx-auto d-block image" alt="..." height = "60">
+      </div>
+      <div class="col-8">
+        <div class="card-body">
+          <%= link_to group_expenses_path(group.id) do %>
+            <h5 class="card-title"><%= group.name %></h5>
+          <% end %>
+          <small>Total amount spent: <%= group.total_transaction %></small>
+          <p class="card-text"><small class="text-muted"><%= group.created_at %></small></p>
+        </div>
+      </div>
+    </div>
+  </div>
+<% end %>
 </div>
-
-<%= link_to "New group", new_group_path %>
+<div class="px-2 text-center">
+  <%= link_to "Add category", new_group_path, :class => "btn btn-primary" %>
+</div>
