--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,15 +1,9 @@
-<% @users.each do |user| %>
-    <div class="user_c">
-      <div class="user_img">
-        
-      </div>
-      <div class="user_data">
-        <%= link_to user_path(user.id) do %>
-        <h2><%= user.name%></h2>
-        <% end %>
-       
-      </div>
-    </div>
-  <%end%>
-
-<%= link_to "New user", new_user_session_path %>
+<div>
+  <div class="p-5">  
+    <h1 class="logo-text text-center py-5">BudgetTK</h1>
+  </div>
+  <div class="d-grid">
+    <%= link_to "Log in", new_user_session_path, :class => "btn btn-primary" %><br>
+    <%= link_to "Sign up", new_user_registration_path, :class => "btn btn-light" %>
+  </div>
+</div>
