--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -11,7 +11,7 @@
           <%= link_to group_expenses_path(group.id) do %>
             <h5 class="card-title"><%= group.name %></h5>
           <% end %>
-          <small>Total amount spent: <%= group.total_transaction %></small>
+          <small>Total amount spent: <%= group.total_expenses %></small>
           <p class="card-text"><small class="text-muted"><%= group.created_at %></small></p>
         </div>
       </div>
