--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,9 @@
   </head>
 
   <body>
-  <%= render 'shared/navbar' %>
+  <% if user_signed_in? %>
+      <%= render partial: "shared/navbar" %>
+    <% end %>
      <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
       <p class="navbar-text float-right">
