--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,142 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@font-face {
+	font-family: 'proxima_nova_rgregular';
+	src: url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.eot');
+	src: url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.woff') format('woff'),
+		 url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.ttf') format('truetype'),
+		 url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.svg#proxima_nova_rgregular') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'proxima_nova_rgbold';
+	src: url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.eot');
+	src: url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.woff') format('woff'),
+		 url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.ttf') format('truetype'),
+		 url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.svg#proxima_nova_rgbold') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'proxima_nova_rgregular', Helvetica, Arial, sans-serif;
+  background-color: #fff;
+}
+
+.header ul {
+  display: flex;
+  background-color: #3778c2;
+  color: white;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.header ul li {
+  line-height: 40px;
+  padding: 5px;
+}
+
+.header a {
+  color: inherit;
+  margin-left: 40%;
+}
+
+.header i {
+  font-size: 32px;
+}
+
+.logo-text {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+h1 {
+  font-size: 10vw;
+  font-weight: 900;
+  background-color: #3778c2;
+  color: #fff;
+  display: block;
+  padding: 0.3em;
+  border-radius: 16px;
+}
+
+h1:nth-child(2) {
+  position: absolute;
+  background-color: #fff;
+  color: #3778c2;
+  clip-path: inset(-1% -1% 50% -1%); 
+}
+
+.sign-up {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 25%;
+}
+
+.logo-nav {
+  background-image:
+    linear-gradient(
+      -225deg,
+      #71af0c 0%,
+      #df8723 29%,
+      #df1818 67%,
+      #fff800 100%
+    );
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 2s linear infinite;
+  display: inline-block;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
+}
+
+.sign-out {
+  padding: 0;
+  border: none;
+  background: none;
+}
+
+.back {
+  color: #fff;
+  font-size: 24px;
+  font-weight: bolder;
+  padding-left: 10px;
+  text-decoration: none;
+}
+.cat-btn {
+  background-color: #5fb523;
+  border: 10px solid white;
+  display: flex;
+  justify-content: center;
+  margin-top: auto;
+  bottom: 0;
+}
+
+.cat-btn a {
+  font-size: 20px;
+  font-weight: 500; 
+}
+img {
+  margin-left: 15%;
+}
