--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,17 +1,27 @@
-<h1 class="brand-text text-primary px-2">Categories</h1>
+<nav class="header">
+  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+    <li>
+    <a href="/"><i class="fa fa-bars"></i></a>
+    </li>
+    <li>
+      <h3 class="heading fw-bold">Categories</h3>
+    </li>
+    <li>
+   <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "justify-content-center align-self-center btn btn-danger btn-sm sign-out" %>
+   </nav>
 <div class="px-2">
 <% @groups.each do |group| %>
   <div class="card mb-3 bg-light" style="max-width: 540px;">
     <div class="row g-0">
-      <div class="col-4 py-3">
-          <img src="<%=(url_for(group.icon))%>" class="img-fluid rounded mx-auto d-block image" alt="..." height = "60">
+      <div class="col-4 py-1">
+          <img src="<%=(url_for(group.icon))%>" class="p-5 rounded img-thumbnail" alt="..." >
       </div>
       <div class="col-8">
         <div class="card-body">
           <%= link_to group_expenses_path(group.id) do %>
             <h5 class="card-title"><%= group.name %></h5>
           <% end %>
-          <small>Total amount spent: <%= group.total_expenses %></small>
+          <small>Total amount spent: $<%= group.total_expenses %></small>
           <p class="card-text"><small class="text-muted"><%= group.created_at %></small></p>
         </div>
       </div>
@@ -19,6 +29,7 @@
   </div>
 <% end %>
 </div>
-<div class="px-2 text-center">
-  <%= link_to "Add category", new_group_path, :class => "btn btn-primary" %>
+
+<div class="w-100  py-1 px-1 cat-btn">
+  <%= link_to "Add category", new_group_path, :class => "btn btn-outline-light" %>
 </div>
