--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,19 +6,13 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <link rel= "stylesheet" href = "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
-  <% if user_signed_in? %>
-      <%= render partial: "shared/navbar" %>
-    <% end %>
-     <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
-      <p class="navbar-text float-right">
-
-</p>
+    
     <%= yield %>
   </body>
 </html>
