--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,32 +1,12 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-      <a class="navbar-brand" href="#">BudgetTK</a>
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-       <% if user_signed_in? %>
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Transaction</a>
-        </li>
-
-        <li class="nav-item px-2">
-             <%= button_to 'Sign out', destroy_user_session_path, method: :delete, class:"nav-link" %>
-        </li>
-        <% else %>
-          <li class="nav-item">
-            <%= link_to 'Resgister', new_user_registration_path, class:"nav-link" %>
-            </li>
-           <li class="nav-item">
-            <%= link_to 'Signin', new_user_session_path, class:"nav-link" %>
-          </li>
-        <% end %> 
-      </ul>
-
-    </div>
-  </div>
+<nav class="navbar navbar-light bg-primary">
+<% if user_signed_in? %>
+ <% if current_page?(root_path ) %>
+       <%= link_to "BudgetTK", groups_path, class: "logo-nav light" %>
+      <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "justify-content-center align-self-center btn btn-danger btn-sm sign-out" %>
+ <% else  %>
+       <%= link_to "<", root_path, class: "back" %>
+       <%= link_to "BudgetTK", groups_path, class: "logo-nav light" %>
+      <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "justify-content-center align-self-center btn btn-danger btn-sm sign-out" %>
+ <% end %>
+<% end %>
 </nav>
