--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -1,8 +1,16 @@
-<div class="d-flex p-2 brand-text">
-  <h3><%= @group.name.capitalize %>'s transactions</h3>
-</div>
-
+<nav class="header">
+  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+    <li>
+    <a href="/"><i class="fa fa-bars"></i></a>
+    </li>
+    <li>
+      <h3>Transaction</h3>
+    </li>
+    <li>
+   <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "justify-content-center align-self-center btn btn-danger btn-sm sign-out" %>
+   </nav>
 <div class="p-2 text-dark-50">
+  <h3><%= @group.name.capitalize %>'s transactions</h3>
   <h4>Total spent: <%= @group.total_expenses %></h4>
 </div>
 
