--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -2,7 +2,7 @@
 
     <div class="mb-3 p-2">
       <%= form.label :name, "Name", :class => "form-label" %>
-      <%= form.text_field :name, placeholder: "Transaction Name", required: true, :class => "form-control" %>
+      <%= form.text_field :name, placeholder: "Expense category", required: true, :class => "form-control" %>
     </div>
 
     <div class="mb-3 p-2">
