--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,6 +30,9 @@
 body {
   font-family: 'proxima_nova_rgregular', Helvetica, Arial, sans-serif;
   background-color: #fff;
+  margin-top: -5%;
+  padding: 0;
+  height: 100vh;
 }
 
 .header ul {
@@ -47,11 +50,12 @@ body {
 
 .header a {
   color: inherit;
-  margin-left: 40%;
+  margin-left: 60%;
 }
 
 .header i {
-  font-size: 32px;
+  font-size: 25px;
+  margin-top: 50%;
 }
 
 .logo-text {
@@ -85,6 +89,13 @@ h1:nth-child(2) {
   margin-left: 25%;
 }
 
+.sign-out {
+  padding: 0;
+  border: none;
+  background: none;
+}
+
+
 .logo-nav {
   background-image:
     linear-gradient(
@@ -103,6 +114,7 @@ h1:nth-child(2) {
   display: inline-block;
   font-size: 20px;
   font-weight: 700;
+  margin-left: 50%;
 }
 
 @keyframes textclip {
@@ -110,23 +122,9 @@ h1:nth-child(2) {
     background-position: 200% center;
   }
 }
-
-.sign-out {
-  padding: 0;
-  border: none;
-  background: none;
-}
-
-.back {
-  color: #fff;
-  font-size: 24px;
-  font-weight: bolder;
-  padding-left: 10px;
-  text-decoration: none;
-}
 .cat-btn {
   background-color: #5fb523;
-  border: 10px solid white;
+  border: 1px solid white;
   display: flex;
   justify-content: center;
   margin-top: auto;
@@ -134,9 +132,32 @@ h1:nth-child(2) {
 }
 
 .cat-btn a {
-  font-size: 20px;
-  font-weight: 500; 
+  font-size: 16px;
+  font-weight: 400; 
 }
 img {
   margin-left: 15%;
+}
+.group-c {
+  margin-top: 10%;
+}
+
+.card-d {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.card-exp {
+  margin-top: 5%;
+  font-weight: 800;
+}
+
+.card-text {
+  margin-top: 10%;
+  font-size: 10px;
+}
+
+.card-title, .card-text {
+  color:#434b54
 }
