--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -1,7 +1,7 @@
 <nav class="header">
   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
     <li>
-    <a href="/"><i class="fa fa-bars"></i></a>
+    <a href="/"><i class="fa fa-chevron-left"></i></a>
     </li>
     <li>
       <h3>Transaction</h3>
