--- a/app/views/expenses/new.html.erb
+++ b/app/views/expenses/new.html.erb
@@ -1,2 +1,13 @@
-<h1>Add your transaction</h1>
+<nav class="header">
+  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+    <li>
+    <a href="/"><i class="fa fa-chevron-left"></i></a>
+    </li>
+    <li>
+      <h3 class="heading fw-bold">Expenses</h3>
+    </li>
+    <li>
+   <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "justify-content-center align-self-center btn btn-danger btn-sm sign-out" %>
+   </nav>
+<h3>Add your expenses</h3>
 <%= render "form" %>
