--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -9,19 +9,21 @@
     <li>
    <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "justify-content-center align-self-center btn btn-danger btn-sm sign-out" %>
    </nav>
-<div class="px-2">
+<div class="group-c px-2">
 <% @groups.each do |group| %>
-  <div class="card mb-3 bg-light" style="max-width: 540px;">
+  <div class="card mb-3 bg-light" >
     <div class="row g-0">
       <div class="col-4 py-1">
           <img src="<%=(url_for(group.icon))%>" class="p-5 rounded img-thumbnail" alt="..." >
       </div>
       <div class="col-8">
         <div class="card-body">
+        <div class= "card-d">
           <%= link_to group_expenses_path(group.id) do %>
             <h5 class="card-title"><%= group.name %></h5>
           <% end %>
-          <small>Total amount spent: $<%= group.total_expenses %></small>
+          <small class="card-exp"> $<%= group.total_expenses %></small>
+          </div>
           <p class="card-text"><small class="text-muted"><%= group.created_at %></small></p>
         </div>
       </div>
@@ -31,5 +33,5 @@
 </div>
 
 <div class="w-100  py-1 px-1 cat-btn">
-  <%= link_to "Add category", new_group_path, :class => "btn btn-outline-light" %>
+  <%= link_to "Add category", new_group_path, :class => "btn btn-outline-light  w-75 p-2" %>
 </div>
