--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -11,7 +11,7 @@
    </nav>
 <div class="p-2 text-dark-50">
   <h3><%= @group.name.capitalize %>'s transactions</h3>
-  <h4>Total spent: <%= @group.total_expenses %></h4>
+  <h4>Total spent: $<%= @group.total_expenses %></h4>
 </div>
 
 
