--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -17,29 +17,29 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
    <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "box-border" %>
+  
+    <%= f.text_field :name, autofocus: true,placeholder: "Full name", autocomplete: "name", class: "box-border" %>
   </div>
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  
+      <%= f.email_field :email, autofocus: true,placeholder: "Email", autocomplete: "email" %>
   </div>
 
   <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+   
+
+       <%= f.password_field :password, placeholder: "Password(6 Characters)",autocomplete: "new-password" %>
+
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  
+    <%= f.password_field :password_confirmation,placeholder: "Password(Confirm)", autocomplete: "new-password" %>
   </div>
-
+  
   <div class="actions">
-    <%= f.submit "Sign up" %>
+  <br />
+    <%= f.submit "Sign up" ,class: "cat-btn" %>
   </div>
 <% end %>
 
